--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                             <div class="wrapper">
                                 <p>
                                     <strong>Acerto:</strong>
-                                    <br>1d20 + [modificador de Força] + [bônus de proficiência] =
+                                    <br>1d20 + [modificador de Força] + [bônus de proficiência]
 
                                     <br>
                                     <br><strong>Dano:</strong>
