--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal - Cheat Sheet</title>
-    <link rel="icon" type="image/png" href="https://icon-library.com/images/dnd-icon/dnd-icon-22.jpg">
+    <link rel="icon" type="image/png" href="./src/assets/icon-192.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="src/styles/base.css">
@@ -15,6 +15,9 @@
     <link rel="stylesheet" href="src/styles/responsive.css">
     <link rel="stylesheet" href="src/styles/tables.css">
     <link rel="stylesheet" href="src/styles/typography.css">
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#4b2e83">
+
 </head>
 
 <body>
@@ -562,6 +565,12 @@
             </div>
         </div>
     </div>
+
+    <script>
+        if ("serviceWorker" in navigator) {
+            navigator.serviceWorker.register("service-worker.js");
+        }
+    </script>
 </body>
 
 </html>
